// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt banner Props status items: center 1`] = `
<bolt-banner align="center">
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      The text is aligned to the center
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: end 1`] = `
<bolt-banner align="end">
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-end">
    <ssr-keep for="bolt-banner">
      The text is aligned to the end
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: error 1`] = `
<bolt-banner status="error">
  <div class="c-bolt-banner c-bolt-banner--status-error c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This banner is trying to convey error
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: information 1`] = `
<bolt-banner status="information">
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This banner is trying to convey information
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: start 1`] = `
<bolt-banner align="start">
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-start">
    <ssr-keep for="bolt-banner">
      The text is aligned to the start
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: success 1`] = `
<bolt-banner status="success">
  <div class="c-bolt-banner c-bolt-banner--status-success c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This banner is trying to convey success
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner Props status items: warning 1`] = `
<bolt-banner status="warning">
  <div class="c-bolt-banner c-bolt-banner--status-warning c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This banner is trying to convey warning
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner default 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a banner
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt banner default 2`] = `
<div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
  <slot>
  </slot>
</div>
`;

exports[`Bolt banner default 3`] = `
<bolt-banner>
  This is a banner
</bolt-banner>
`;

exports[`Bolt banner default 4`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a banner
    </ssr-keep>
  </div>
</bolt-banner>
`;
